[gd_scene load_steps=33 format=3 uid="uid://dgms6s5c6847n"]

[ext_resource type="Script" path="res://Scenes/GameLoop/GameLoop.gd" id="1_7bs80"]
[ext_resource type="PackedScene" uid="uid://cc8qq8nuav8ol" path="res://Scenes/GameLoop/PauseMenu/PauseMenu.tscn" id="2_aaawu"]
[ext_resource type="PackedScene" uid="uid://cu1qimgoij27y" path="res://Scenes/Componentes/Background.tscn" id="2_qwyw7"]
[ext_resource type="PackedScene" uid="uid://cnvrhukyxun15" path="res://Scenes/Componentes/Douces.tscn" id="3_n4kqb"]
[ext_resource type="PackedScene" uid="uid://b2en35wgf36dm" path="res://Scenes/Componentes/Lourdes.tscn" id="4_nhjlw"]
[ext_resource type="Texture2D" uid="uid://dxeqnmbk6s1ov" path="res://Assets/Imagens/pause.svg" id="5_yjq5d"]
[ext_resource type="Texture2D" uid="uid://ckymsguitlynp" path="res://Assets/Imagens/pause_pressed.svg" id="6_lors2"]
[ext_resource type="Texture2D" uid="uid://dq8r0v5ofqi03" path="res://Assets/Imagens/manchete_balao.svg" id="7_yd4eu"]
[ext_resource type="Texture2D" uid="uid://sbxxvxxv5ro8" path="res://Assets/Imagens/pagina.png" id="8_mvne2"]
[ext_resource type="FontFile" uid="uid://dvp2jquyd01n7" path="res://Assets/Fontes/MochiyPopOne-Regular.ttf" id="9_pfwtl"]
[ext_resource type="Texture2D" uid="uid://dninxisgald5t" path="res://Assets/Imagens/seta.svg" id="10_og0lg"]
[ext_resource type="Texture2D" uid="uid://dtmge7ay1nkjn" path="res://Assets/Imagens/seta_pressed.svg" id="11_7qrjf"]
[ext_resource type="Texture2D" uid="uid://lsjjqiw3tugh" path="res://Assets/Imagens/criminalidade.svg" id="13_wua68"]
[ext_resource type="Theme" uid="uid://cyypp2612hcef" path="res://Assets/Temas/BarraCrime.tres" id="14_e6d6e"]
[ext_resource type="Texture2D" uid="uid://ce5phgcw8s2cg" path="res://Assets/Imagens/orcamento.svg" id="15_w6y5t"]
[ext_resource type="Theme" uid="uid://b6btopaperbt1" path="res://Assets/Temas/BarraPadrao.tres" id="16_65uti"]
[ext_resource type="Texture2D" uid="uid://kogr60h4n7gs" path="res://Assets/Imagens/aprovacao.svg" id="16_lhstf"]
[ext_resource type="FontFile" uid="uid://dlrp4rktxbpfg" path="res://Assets/Fontes/ShantellSans-Bold.ttf" id="18_kn7xy"]
[ext_resource type="FontFile" uid="uid://dt6meu5mnlbqg" path="res://Assets/Fontes/ShantellSans-Medium.ttf" id="19_5gf8s"]
[ext_resource type="Texture2D" uid="uid://daxiwpe8vjod4" path="res://Assets/Imagens/seta_escura.svg" id="20_qtfa2"]
[ext_resource type="FontFile" uid="uid://ck80p85vb258u" path="res://Assets/Fontes/ShantellSans-Regular.ttf" id="20_x56ol"]
[ext_resource type="Texture2D" uid="uid://cn3vg06hj4q8l" path="res://Assets/Imagens/seta_escura_pressed.svg" id="21_3nw1v"]

[sub_resource type="LabelSettings" id="LabelSettings_6ib3x"]
font = ExtResource("19_5gf8s")
font_size = 40
font_color = Color(0.360784, 0.294118, 0.317647, 1)

[sub_resource type="Animation" id="Animation_yjm82"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FecharNoticia:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.076416, 14.1649)]
}

[sub_resource type="Animation" id="Animation_b3pqt"]
resource_name = "botao"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FecharNoticia:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.076416, 14.1649), Vector2(0.076, 5), Vector2(0.076, 14.165)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqw8v"]
_data = {
"RESET": SubResource("Animation_yjm82"),
"botao": SubResource("Animation_b3pqt")
}

[sub_resource type="LabelSettings" id="LabelSettings_c1n3d"]
font = ExtResource("9_pfwtl")
font_size = 80
font_color = Color(0.360784, 0.294118, 0.317647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qf628"]
font = ExtResource("20_x56ol")
font_size = 70
font_color = Color(0.356863, 0.298039, 0.317647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_odxp8"]
font = ExtResource("19_5gf8s")
font_size = 67
font_color = Color(0.356863, 0.298039, 0.317647, 1)

[sub_resource type="Animation" id="Animation_4j1d6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TouchScreenButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(911, 1350)]
}

[sub_resource type="Animation" id="Animation_aue5f"]
resource_name = "botao"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TouchScreenButton:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(911, 1350), Vector2(911, 1375), Vector2(911, 1350)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5p65i"]
_data = {
"RESET": SubResource("Animation_4j1d6"),
"botao": SubResource("Animation_aue5f")
}

[node name="GameLoop" type="Node2D"]
script = ExtResource("1_7bs80")

[node name="Base" type="CanvasLayer" parent="."]

[node name="Background" parent="Base" instance=ExtResource("2_qwyw7")]

[node name="Douces" parent="Base" instance=ExtResource("3_n4kqb")]
offset_left = 243.0
offset_top = 622.0
offset_right = -173.0
offset_bottom = -970.0

[node name="Lourdes" parent="Base" instance=ExtResource("4_nhjlw")]
offset_left = 838.0
offset_top = 1222.0
offset_right = 838.0
offset_bottom = 1222.0

[node name="PauseArea" type="Control" parent="Base"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -161.0
offset_top = 21.0
offset_right = -19.0
offset_bottom = 155.0
grow_horizontal = 0

[node name="Pause" type="TouchScreenButton" parent="Base/PauseArea"]
position = Vector2(14, 9)
scale = Vector2(0.481328, 0.481328)
texture_normal = ExtResource("5_yjq5d")
texture_pressed = ExtResource("6_lors2")

[node name="Noticias" type="Control" parent="Base"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -358.0
offset_right = 358.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="TextureNoticia" type="TextureRect" parent="Base/Noticias"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -214.0
offset_right = 36.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.08355, 1.08355)
texture = ExtResource("7_yd4eu")
expand_mode = 4
stretch_mode = 5

[node name="TituloNoticia" type="TextureRect" parent="Base/Noticias/TextureNoticia"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 113.0
offset_top = 179.0
offset_right = 10.0
offset_bottom = -589.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.849001, 0.849001)
texture = ExtResource("8_mvne2")
expand_mode = 1
stretch_mode = 4

[node name="TextoNoticia" type="Label" parent="Base/Noticias/TextureNoticia"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 123.0
offset_top = -150.0
offset_right = -11.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.831326, 1.0512)
text = "O que precisamos é de mais postes nas ruas mais periféricas, não luzinhas coloridas! Moradores indignados por luzes com novas cores nos seus bairros"
label_settings = SubResource("LabelSettings_6ib3x")
autowrap_mode = 2

[node name="Control" type="Control" parent="Base/Noticias/TextureNoticia"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -177.458
offset_top = -360.393
offset_right = -102.458
offset_bottom = -287.393
grow_horizontal = 0
grow_vertical = 0

[node name="FecharNoticia" type="TouchScreenButton" parent="Base/Noticias/TextureNoticia/Control"]
position = Vector2(0.076416, 14.1649)
scale = Vector2(0.356861, 0.356861)
texture_normal = ExtResource("10_og0lg")
texture_pressed = ExtResource("11_7qrjf")

[node name="AnimationBotaoNoticia" type="AnimationPlayer" parent="Base/Noticias/TextureNoticia/Control"]
libraries = {
"": SubResource("AnimationLibrary_sqw8v")
}

[node name="Topo" type="Control" parent="Base"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 711.0
offset_right = 292.0
offset_bottom = 875.0
grow_horizontal = 2

[node name="BoxTopo" type="VBoxContainer" parent="Base/Topo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 11.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextoDia" type="Label" parent="Base/Topo/BoxTopo"]
layout_mode = 2
text = "Mês 01
"
label_settings = SubResource("LabelSettings_c1n3d")
horizontal_alignment = 1

[node name="TextoTurno" type="Label" parent="Base/Topo/BoxTopo"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Manhã"
label_settings = SubResource("LabelSettings_qf628")
horizontal_alignment = 1

[node name="TextoPergunta" type="Label" parent="Base/Topo/BoxTopo"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Quais sao suas propostas?"
label_settings = SubResource("LabelSettings_odxp8")
horizontal_alignment = 1

[node name="Rodape" type="Control" parent="Base"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -282.0
grow_horizontal = 2
grow_vertical = 0

[node name="BoxRodape" type="VBoxContainer" parent="Base/Rodape"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -110.0
offset_right = 1032.0
offset_bottom = 95.0
grow_vertical = 2

[node name="BoxCrime" type="HBoxContainer" parent="Base/Rodape/BoxRodape"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icone" type="TextureRect" parent="Base/Rodape/BoxRodape/BoxCrime"]
layout_mode = 2
texture = ExtResource("13_wua68")
expand_mode = 2
stretch_mode = 5

[node name="ProgressCrime" type="ProgressBar" parent="Base/Rodape/BoxRodape/BoxCrime"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("14_e6d6e")
step = 1.0
value = 50.0
show_percentage = false

[node name="BoxDinheiro" type="HBoxContainer" parent="Base/Rodape/BoxRodape"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icone" type="TextureRect" parent="Base/Rodape/BoxRodape/BoxDinheiro"]
layout_mode = 2
texture = ExtResource("15_w6y5t")
expand_mode = 2
stretch_mode = 5

[node name="ProgressDinheiro" type="ProgressBar" parent="Base/Rodape/BoxRodape/BoxDinheiro"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("16_65uti")
step = 1.0
value = 50.0
show_percentage = false

[node name="BoxCrime3" type="HBoxContainer" parent="Base/Rodape/BoxRodape"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icone" type="TextureRect" parent="Base/Rodape/BoxRodape/BoxCrime3"]
layout_mode = 2
texture = ExtResource("16_lhstf")
expand_mode = 2
stretch_mode = 5

[node name="ProgressPopularidade" type="ProgressBar" parent="Base/Rodape/BoxRodape/BoxCrime3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("16_65uti")
step = 1.0
value = 50.0
show_percentage = false

[node name="Abertura" type="Control" parent="Base"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextoAberturaTopo" type="RichTextLabel" parent="Base/Abertura"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 97.0
offset_top = 177.0
offset_right = -97.0
offset_bottom = -1538.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.294118, 0.317647, 1)
theme_override_fonts/normal_font = ExtResource("19_5gf8s")
theme_override_fonts/bold_font = ExtResource("18_kn7xy")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]Parabéns![/b]
Você foi eleito prefeito de São Paulo.[/center]"
scroll_active = false

[node name="TextoAbertura" type="RichTextLabel" parent="Base/Abertura"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 81.0
offset_top = 445.0
offset_right = -67.0
offset_bottom = -674.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.294118, 0.317647, 1)
theme_override_fonts/normal_font = ExtResource("20_x56ol")
theme_override_fonts/bold_font = ExtResource("18_kn7xy")
theme_override_font_sizes/bold_italics_font_size = 50
theme_override_font_sizes/italics_font_size = 50
theme_override_font_sizes/mono_font_size = 50
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "Infelizmente, em 2024, a cidade se
encontra tomada pelo crime 
organizado. Roubos, latrocínios, feminicídios e furtos de celulares estão em alta.

Para tentar resolver estes problemas em alguns meses, você chamou seus dois conselheiros mais influentes."

[node name="TextoAberturaRodape" type="RichTextLabel" parent="Base/Abertura"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 97.0
offset_top = 1251.0
offset_right = -97.0
offset_bottom = -538.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0.360784, 0.294118, 0.317647, 1)
theme_override_fonts/normal_font = ExtResource("19_5gf8s")
theme_override_fonts/bold_font = ExtResource("18_kn7xy")
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 50
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[center][b]Quem você vai escutar?[/b][/center]"
scroll_active = false

[node name="TouchScreenButton" type="TouchScreenButton" parent="Base/Abertura"]
position = Vector2(911, 1350)
scale = Vector2(0.376964, 0.376964)
texture_normal = ExtResource("20_qtfa2")
texture_pressed = ExtResource("21_3nw1v")

[node name="AnimationBotaoAbertura" type="AnimationPlayer" parent="Base/Abertura"]
libraries = {
"": SubResource("AnimationLibrary_5p65i")
}

[node name="PauseMenuOverlay" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="PauseMenuOverlay" instance=ExtResource("2_aaawu")]
process_mode = 3
visible = false

[connection signal="Finalizado" from="Base/Background" to="." method="_on_background_finalizado"]
[connection signal="Selecionar" from="Base/Douces" to="." method="_on_douces_selecionar"]
[connection signal="Selecionar" from="Base/Lourdes" to="." method="_on_lourdes_selecionar"]
[connection signal="pressed" from="Base/PauseArea/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Base/Noticias/TextureNoticia/Control/FecharNoticia" to="." method="_on_fechar_noticia_pressed"]
[connection signal="pressed" from="Base/Abertura/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="resumed" from="PauseMenuOverlay/PauseMenu" to="." method="_on_pause_menu_resumed"]
